# kokkos-comm-miniFE

./: CMakeLists.txt  README.md
fem/: verify_solution.hpp
kokkos/: Kokkos_DualViewHelper.hpp  Kokkos_Vector.hpp
kokkos/linalg/src/: Kokkos_CrsMatrix.hpp  Kokkos_MV.hpp
src/: CSRMatrix.hpp  Kokkos_Types.hpp  SparseMatrix_functions.hpp  Vector_functions.hpp  cg_solve.hpp  exchange_externals.hpp  generate_matrix_structure.hpp  main.cpp  make_local_matrix.hpp
utils/: imbalance.hpp  miniFE_info.hpp.in  utils.cpp  utils.hpp
